[build-system]
requires = ["setuptools"] #, "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
#version_file = "dbt_pipeline_utils/_version.py"

[project]
name = "dbt_pipeline_utils"
authors = [
    {name = "Brenda Gutman", email="brenda.gutman@vumc.org"}
]
description = ""
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)